Fix message input visibility in Contact Us page

--- a/Pages/contact/contact.css
+++ b/Pages/contact/contact.css
@@ -168,7 +168,7 @@ body {
   font-size: 16px;
   margin-top: 3px;
   padding: 6px;
-  color: #e4e4ee;
+  color: #0e0e0f;
 }
 
 .input-box label {
